# Conversor_Analitico

./: .gitignore  README.md  config.py  main.py  pyproject.toml
application/: interfaces.py  use_cases.py
domain/: entities.py
infrastructure/: adapters.py  detector.py  logging_config.py  savers.py
presentation/: app.py  events.py  widgets.py
