[project]
name = "conversor-analitico"
version = "2.0.0"
description = "Conversor de arquivos CSV de alto desempenho com Clean Architecture"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=5.0.0",
    "pandas>=2.0.0",
    "psutil>=5.9.0",
    "tqdm>=4.65.0",
    "pyarrow>=14.0.0",
    "tables>=3.8.0",
    "chardet>=5.0.0",
]  

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP"]
ignore = []

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
exclude = ["venv", ".venv"]

[tool.black]
line-length = 100
target-version = ['py310']
